2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Profiling.addin.xml: Bump MD version.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* IProfiler.cs:
	* AbstractProfiler.cs:
	* ProfilingOperations.cs: Changed the way execution handlers
	  work. We are not using platform ids anymore. Instead, we use
	  command strings when looking for execution handlers.
	  IExecutionHandlerFactory has been removed and now everything
	  is handled by IExecutionHandler, which has a new CanExecute
	  method. This model is more simple and more generic.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * AssemblyInfo.cs:
 * MonoDevelop.Profiling.addin.xml: Bump MD version.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Profiling.mdp: Flush project format changes.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* DummyProcessAsyncOperation.cs: Track api changes.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* MonoDevelop.Profiling.mdp: Add AssemblyInfo.cs files that are
	autogenerated from the addin manifests.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Profiling.addin.xml: Track extension point changes.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Profiling.addin.xml: Bump MD version.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Profiling.mdp: Updated projects.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Pads/ProfilingPad.cs, Pads/ProfilingSnapshotCollectionNodeBuilder.cs:
	  Moved the extensible tree view to its own directory.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Profiling.mdp: Fix reference to Mono.TextEditor. The
	  incorrect add-in version number causes problems in the makefile
	  synchronization.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 
